--- a/src/components/hero-section/hero_style.scss
+++ b/src/components/hero-section/hero_style.scss
@@ -6,18 +6,26 @@
     bottom: 8rem;
     left: 90%;
     box-shadow: 0px 0 8rem 5rem #680f0fad;
-
 }
 
 #heroSection {
-
     .headTAG {
-        font-size: 22.6rem;
+        font-size: 20rem;
+        // font-size: 22.6rem;
         letter-spacing: 6rem;
-        position: absolute;
-        padding: 0 4rem;
-        padding-top: 4rem;
-        color: #ae0909;
+        // position: absolute;
+        // padding: 0 4rem;
+        // padding-top: 4rem;
+        // color: #ae0909;
+        padding-top: 5rem;
+        color: #711111;
+        padding-left: 7rem;
     }
 
+    // Other Decoration Div
+    .other_decoration {
+        display: flex;
+        padding: 0 6rem;
+        justify-content: space-between;
+    }
 }
