--- a/src/components/Exploration/style.scss
+++ b/src/components/Exploration/style.scss
@@ -1,3 +1,12 @@
+.header_tag {
+
+    font-size: 3rem;
+    font-family: "MarsProject", sans-serif;
+    word-spacing: 10px;
+    letter-spacing: -1px;
+    font-weight: 600;
+}
+
 .particle_container {
     width: 30rem;
     aspect-ratio: 1;
