--- a/src/page/Home/home_style.scss
+++ b/src/page/Home/home_style.scss
@@ -13,7 +13,9 @@ section.hero-section {
 }
 
 .exploration-section {
+    margin-top: 5rem;
     position: relative;
     height: 100vh;
     width: 100vw;
+    padding: 1rem 6rem;
 }
