--- a/src/components/Exploration/style.scss
+++ b/src/components/Exploration/style.scss
@@ -1,5 +1,5 @@
 .header_tag {
-
+    margin-bottom: 6rem;
     font-size: 3rem;
     font-family: "MarsProject", sans-serif;
     word-spacing: 10px;
@@ -7,14 +7,20 @@
     font-weight: 600;
 }
 
-.particle_container {
+.size_container {
     width: 30rem;
     aspect-ratio: 1;
+}
+
+.particle_container {
+
     position: relative;
     left: 10rem;
     cursor: pointer;
 
     .dot {
+        position: relative;
+        z-index: 10;
         width: 8px;
         aspect-ratio: 1;
         background-color: #fff;
@@ -43,6 +49,8 @@
 
     .text_box {
         width: 10rem;
+        transition: all 0.4s ease-in-out;
+        padding: 2rem;
 
         &:nth-child(1) {
             margin-left: 2rem;
@@ -53,6 +61,11 @@
 
         }
     }
+
+    .hovered {
+        background-color: rgba(58, 6, 4, 0.607);
+        border: 1px solid #ccc4c4;
+    }
 }
 
 #white-blob {
@@ -60,3 +73,6 @@
     left: 60%;
     box-shadow: 0px 0 8rem 5rem #d8d1d185;
 }
+
+///////////////////////////////////////////
+/// 
