--- a/src/components/Exploration/style.scss
+++ b/src/components/Exploration/style.scss
@@ -32,7 +32,9 @@
 
 
         &:hover {
-            scale: 1.4;
+            scale: 2.3;
+            box-shadow: 0 0 10px #404040;
+            border: 3px double rgb(0, 0, 0);
 
         }
     }
@@ -44,13 +46,24 @@
 .text_box-container {
     position: absolute;
     top: 20%;
-    right: 15%;
-    width: 13rem;
+    right: 10%;
+
 
     .text_box {
-        width: 10rem;
-        transition: all 0.4s ease-in-out;
-        padding: 2rem;
+        width: 20rem;
+        transition: visibility 0.4s ease-in-out, scale 0.4s ease-in-out;
+        // transition: ;
+        padding: 1rem;
+        margin-bottom: 2rem;
+        visibility: hidden;
+        background-color: rgba(93, 93, 93, 0.22);
+        border: 1px solid #fff3;
+        border-radius: 5px;
+        scale: 0.8;
+
+        p {
+            font-size: 14px;
+        }
 
         &:nth-child(1) {
             margin-left: 2rem;
@@ -63,8 +76,9 @@
     }
 
     .hovered {
-        background-color: rgba(58, 6, 4, 0.607);
-        border: 1px solid #ccc4c4;
+        scale: 1;
+        visibility: visible;
+
     }
 }
 
