--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,12 @@
   z-index: -3;
   box-shadow: 0px 0 8rem 8rem #4d1212cc;
 }
+
+/* Header Line for all  section  */
+.header_tag {
+  font-size: 3rem;
+  font-family: "MarsProject", sans-serif;
+  word-spacing: 10px;
+  letter-spacing: -1px;
+  font-weight: 600;
+}
