--- a/src/components/Gallery/gallery_style.scss
+++ b/src/components/Gallery/gallery_style.scss
@@ -1,30 +1,36 @@
 .card_container {
     margin: 0 auto;
-    gap: calc(3rem + 4vw);
+    gap: calc(7rem + 4vw);
     height: calc(100% - 63px);
+    overflow: hidden;
+    position: relative;
+    width: fit-content;
 
     .card {
         justify-content: space-around;
-        display: flex;
+        display: inline-flex;
         flex-direction: column;
-        padding: 1.2rem;
-        width: 20%;
+        padding: 0 0.5rem;
+        // width: 25%;
+        width: clamp(23vw, 3.09rem + 3.29vw, 38vw);
         height: 90%;
         justify-content: center;
         overflow: hidden;
-        transition: all 0.3s ease-in-out;
+        scale: 0.8;
+        transition: all 650ms ease-in-out;
 
         img {
-            aspect-ratio: 4/3;
             opacity: 0.5;
             filter: blur(1px);
             border-radius: 2px;
-            transition: all .2s ease-in-out;
+            height: 38%;
+            transition: height .7s ease-in-out, opacity .6s ease-in-out, filter .5s ease-in-out;
+
         }
 
 
         .card_no {
-            transition: all .2s ease-in-out;
+            transition: all .4s ease-in-out;
             padding: 0.5rem;
             color: #ffffff77;
             font-size: 1.2rem;
@@ -39,7 +45,7 @@
 
     .currentHovered {
         padding: 0;
-        width: 27%;
+        scale: 1;
 
         .card_no {
             color: #ffffffdc;
@@ -48,8 +54,8 @@
         }
 
         img {
-            width: 100%;
             height: 100%;
+            // aspect-ratio: 3/6;
             opacity: 1;
             filter: blur(0);
         }
