--- a/src/components/Gallery/gallery_style.scss
+++ b/src/components/Gallery/gallery_style.scss
@@ -24,6 +24,7 @@
             filter: blur(1px);
             border-radius: 2px;
             height: 38%;
+            object-fit: cover;
             transition: height .7s ease-in-out, opacity .6s ease-in-out, filter .5s ease-in-out;
 
         }
@@ -55,7 +56,7 @@
 
         img {
             height: 100%;
-            // aspect-ratio: 3/6;
+
             opacity: 1;
             filter: blur(0);
         }
