--- a/src/components/textSlideing/style.scss
+++ b/src/components/textSlideing/style.scss
@@ -1,18 +1,5 @@
-// .marqueeContainer {}
-
-// .TextRow {
-
-//     white-space: nowrap;
-
-//     span {
-//         font-size: clamp(4.50rem, 3.64rem + 4.29vw, 9.00rem);
-//     }
-// }
-
 :root {
-    --step--2: clamp(3.13rem, 2.62rem + 2.51vw, 5.76rem);
-    --step--1: clamp(3.75rem, 3.09rem + 3.29vw, 7.20rem);
-    --step-0: clamp(4.50rem, 3.64rem + 4.29vw, 9.00rem);
+    --step-0: clamp(4.5rem, 3.64rem + 3.29vw, 9rem)
 }
 
 @keyframes marquee {
