Last Chore 🧹: model Can Move all Clean Now

--- a/src/components/Contacts/style.scss
+++ b/src/components/Contacts/style.scss
@@ -17,6 +17,7 @@
         margin: 1.2rem auto;
 
         img {
+            animation: slideOutIn 2s ease-in-out infinite;
             width: 6rem
         }
     }
