--- a/src/components/Fact-section/style.scss
+++ b/src/components/Fact-section/style.scss
@@ -40,6 +40,7 @@
         p {
             padding: 0 1.4rem;
             transform: scale(0);
+            text-align: center;
             color: transparent;
             transition: transform .5s ease-in-out .2s;
         }
