--- a/src/page/Home/home_style.scss
+++ b/src/page/Home/home_style.scss
@@ -1,11 +1,12 @@
 .bgBlur {
     flex-basis: 50%;
     width: 100vw;
-    max-height: 100vh;
+    height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
 
 }
+
 
 
 section {
