--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,15 @@
   letter-spacing: -1px;
   font-weight: 600;
 }
+
+@keyframes slideOutIn {
+  0% {
+    transform: translateX(20px);
+  }
+  50% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(20px);
+  }
+}
