--- a/src/components/hero-section/hero_style.scss
+++ b/src/components/hero-section/hero_style.scss
@@ -16,13 +16,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: hidden;
+        min-height: 68vh;
+
+        .model-wrapper {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            overflow: hidden;
+        }
 
         #Canvas {
             position: absolute !important;
-            // top: 8rem;
-            // height: 60vh !important;
-            // height: 100% !important;
 
         }
 
@@ -30,8 +34,11 @@
             animation: rotating 7s linear infinite;
             scale: .94;
 
+            top: 50%;
+            translate: 0 -50%;
+
             circle {
-                // fill: transparent;
+
                 stroke: #e8430266;
                 stroke-width: 0.13;
             }
@@ -41,15 +48,11 @@
             position: relative;
             z-index: -2;
             font-size: 20rem;
-            // font-family: 'SeldomScene', sans-serif;
             font-family: 'NewMars', sans-serif;
-            // letter-spacing: 5rem;
             letter-spacing: 2rem;
             padding-top: 5rem;
             color: #711111;
-            // padding-left: 7rem;
             display: flex;
-            // gap: 22rem;
             gap: 18rem;
         }
     }
@@ -68,6 +71,7 @@
             align-items: center;
 
             img {
+                animation: slideOutIn 2s ease-in-out infinite;
                 width: 6rem
             }
 
